<resources>
    <string name="app_name">Fortnightly</string>
    <string name="snackbar_news_fetch_successful_message">News refreshed successfully</string>
    <string name="snackbar_news_fetch_Error_message">Something went wrong, Check your internet connection</string>
    <string name="tab_item_category_business">#business</string>
    <string name="tab_item_category_entertainment">#entertainment</string>
    <string name="tab_item_category_general">#general</string>
    <string name="tab_item_category_health">#health</string>
    <string name="tab_item_category_science">#science</string>
    <string name="tab_item_category_sports">#sports</string>
    <string name="tab_item_category_technology">#technology</string>
    <string name="transition_name_article_image">articleImageTransitionName</string>
    <string name="button_continue_reading">Continue Reading this Article</string>
</resources>