<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.afterapps.fortnightly.ui.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/article_category_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:tabIndicatorColor="@color/black"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/black"
            app:tabTextAppearance="@style/tab_text">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_business" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_entertainment" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_general" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_health" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_science" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_sports" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_item_category_technology" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/news_articles_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:resourceStatusProgress="@{viewModel.newsArticlesFlow}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_articles_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:padding="16dp"
                app:dataResourceStatus="@{viewModel.newsArticlesFlow}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:newsData="@{viewModel.newsArticlesFlow.data}"
                tools:listitem="@layout/list_item_news_article" />
        </FrameLayout>
    </LinearLayout>

</layout>